# repo

./: .editorconfig  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  build.rs  flake.nix  readme.md  shell.nix
.github/: dependabot.yml
.github/workflows/: audit.yml  check.yml  ci.yml  prs.yml  release.yml
docs/resources/: demo.yml  screencast.sh
src/: cache.rs  config.rs  lib.rs  location.rs  main.rs  prelude.rs  query.rs  remote.rs  repository.rs  scp.rs  tag.rs  util.rs  workspace.rs
src/cmd/: add.rs  cli.rs  config.rs  edit.rs  foreach.rs  init.rs  inspect.rs  list.rs  mod.rs  remove.rs  update.rs  work.rs
src/cmd/tag/: add.rs  edit.rs  list.rs  mod.rs  remove.rs
src/config/: config.rs  data.rs  inner.rs  mod.rs
src/git/: cli.rs  libgit.rs  mod.rs
src/query/: abbrev.rs  inner.rs  mod.rs  scheme.rs  scp.rs
src/shell/: mod.rs
src/shell/bash/: completion.bash  fzf.bash  mod.rs  work.bash
src/shell/fish/: completion.fish  fzf.fish  mod.rs  work.fish
src/shell/zsh/: completion.zsh  fzf.zsh  mod.rs  work.zsh
