[package]
name = "repo-cli"
version = "0.1.2"
authors = ["James Simpson <edenofest@gmail.com>"]
edition = "2018"
include = ["src/**/**", "Cargo.toml", "Cargo.lock", "readme.md"]
description = "A sane way to manage all of your git repositories"
repository = "https://github.com/edeneast/repo.git"
documentation = "https://github.com/edeneast/repo.git"
homepage = "https://github.com/edeneast/repo.git"
keywords = [
    'automation',
    'cli',
    'developer-tools',
    'git',
    'productivity',
]
license = "Apache-2.0"
readme = "readme.md"

[features]
# Vendor OpenSSL, use this if you have trouble cross-compiling starship
tls-vendored = ["native-tls/vendored"]

[profile.release] # min rust size resource https://github.com/johnthagen/min-sized-rus
codegen-units = 1 # There are some optimizations that prevented with multi units
lto = true        # Optimize the result in the linking phase
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Remove stack unwinding code for panic

[dependencies]
anyhow = "^1.0.40"
better-panic = "^0.2.0"
clap = "^2.33.3"
dialoguer = "^0.8.0"
dirs-next = "2.0.0"
git2 = "^0.13.18"
git2_credentials = "^0.6.1"
glob = "^0.3.0"
lazy_static = "^1.4.0"
log = "^0.4.11"
pretty_env_logger = "^0.4.0"
regex = "^1.4.5"
ron = "~0.6.4"
serde = { version = "~1.0.123", features = ["derive"] }
serde_json = "~1.0.64"
shellexpand = "^2.1.0"
toml = "^0.5.8"
url = { version = "^2.2.1", features = ["serde"] }

# optional
native-tls = { version = "0.2", optional = true }

[[bin]]
name = "repo"
path = "./src/bin/repo/main.rs"
