[package]
name = "repo-cli"
version = "0.1.3"
authors = ["James Simpson <edenofest@gmail.com>"]
edition = "2018"
include = ["src/**/**", "Cargo.toml", "Cargo.lock", "readme.md"]
description = "A sane way to manage all of your git repositories"
repository = "https://github.com/edeneast/repo.git"
documentation = "https://github.com/edeneast/repo.git"
homepage = "https://github.com/edeneast/repo.git"
keywords = [
    'automation',
    'cli',
    'developer-tools',
    'git',
    'productivity',
]
license = "Apache-2.0"
readme = "readme.md"

[features]
# Vendor OpenSSL, use this if you have trouble cross-compiling starship
tls-vendored = ["native-tls/vendored"]

[profile.release] # min rust size resource https://github.com/johnthagen/min-sized-rus
codegen-units = 1 # There are some optimizations that prevented with multi units
lto = true        # Optimize the result in the linking phase
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Remove stack unwinding code for panic

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.1.11", features = [ "cargo", "derive" ] }
dialoguer = "0.10.3"
dirs-next = "2.0.0"
git2 = "0.18.2"
git2_credentials = "0.13.0"
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.114"
shellexpand = "3.1.0"
toml = "0.7.3"
url = { version = "2.3.1", features = ["serde"] }

# optional
native-tls = { version = "0.2", optional = true }

[[bin]]
name = "repo"
path = "./src/main.rs"

[build-dependencies]
clap = "4.1.11"
clap_mangen = "0.2.10"
